deleted userform file as now used in weather logic and added weather decriptions call from API

--- a/src/App.css
+++ b/src/App.css
@@ -8,4 +8,13 @@ html,body{
   margin:0;
 }
 
-
+.info{
+  display:flex ;
+  flex-direction: column;
+  
+}
+.weatherForm{
+  justify-content: flex-start;
+  align-items: left;
+  align-content: left;
+}
